# 20260518-Agentic-AI

./: .env.dev.example  .gitignore  demo_crash.sqlite  support_agents_LangGraph_threads.sqlite
.github/workflows/: support-api.yaml
examples/: atomic_write_demo.py  custom_exception_demo.py  enrich_batch_demo.py  enrich_one_demo.py  first_llm_call.py  logging_console_demo.py  prompt_lab.py  pydantic_validation_demo.py  python_warmup.py  route_decision_demo.py  run_rate_limited_batch.py  temperature_sweep.py  timed_decorator_demo.py  token_explorer.py  triage_eval.py
labs/: day_3_lab.md
project1/Brian Perry/: 02-movie-watchlist.md
project1/Chris Christenson/: 12-conference-talks.md
project1/Connor Campbell/: 01-recipe-manager.md
project1/Garrett Jones/: 03-bug-tracker.md
project1/Marquis Buckley/: 11-charity-donations.md
project1/Mohamed Fofana/: 04-job-application-tracker.md
projects/John Vea/: 08-pet-adoption.md
support-agents/: pyproject.toml
support-agents/src/support_agents/: api_client.py  batch.py  config.py  graph_viz.py  schemas.py  triage.py  triage_agent.py  triage_tools.py
support-agents/src/support_agents.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
support-agents/src/support_agents/LangChain/: triage_chain.py
support-agents/src/support_agents/LangGraph/: approval.py  graph.py  hierarchy.py  orchestrator.py  persistence.py  react_agent.py  specialists.py  supervisor.py  team_graph.py
support-agents/src/support_agents/mcp/: __init__.py  bridge.py  kb_server.py
support-api/: .dockerignore  pyproject.toml  tickets.db
(+60 files in other folders)
